SCR #300105 - fix: remove visibility hidden & add width and height 0 to hidden input

--- a/src/modules/core/components/input/styles/input.component.scss
+++ b/src/modules/core/components/input/styles/input.component.scss
@@ -5,6 +5,7 @@
 .hidden-input.hidden-input.hidden-input.hidden-input:not(.clever-chrome) {
     position: absolute;
     z-index: -1;
-    visibility: hidden;
     opacity: 0;
+    width: 0;
+    height: 0;
 }
